--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.url=jdbc:h2:mem:obanadb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=
+spring.h2.console.enabled:true
+logging.level.root=INFO
