--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 	runtimeOnly 'com.h2database:h2'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
+	testCompile 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.0'
+	testCompile 'org.hamcrest:hamcrest-all:1.3'
+	
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
