--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-
+	implementation 'org.imgscalr:imgscalr-lib:4.2'
+	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'com.h2database:h2'
