--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.url=jdbc:h2:mem:obanadb
+spring.datasource.url=jdbc:h2:file:./db/obanabd
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=
